samples/_failures_safe/1761147676_e34e39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fac4c02.c: In function ‘main’:
./samples/SAFE/__tmp_2fac4c02.c:146:9: error: expected declaration or statement at end of input
  146 |         free(entries);
      |         ^~~~
./samples/SAFE/__tmp_2fac4c02.c:146:9: error: expected declaration or statement at end of input
